[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/characters/dogtective_portrait.png" type="Texture" id=1]
[ext_resource path="res://Battle/UI/BattleWonStats.gd" type="Script" id=2]

[node name="BattleWonStats" type="VBoxContainer"]
margin_top = 100.0
margin_right = 608.0
margin_bottom = 156.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_right = 608.0
margin_bottom = 48.0

[node name="Portrait" type="TextureRect" parent="HBoxContainer3"]
margin_right = 51.0
margin_bottom = 48.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer3"]
margin_left = 55.0
margin_top = 17.0
margin_right = 215.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Dogtective"
align = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer3"]
margin_left = 219.0
margin_right = 223.0
margin_bottom = 48.0

[node name="Label2" type="Label" parent="HBoxContainer3"]
margin_left = 227.0
margin_top = 17.0
margin_right = 307.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Lvl"
align = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer3"]
margin_left = 311.0
margin_top = 17.0
margin_right = 391.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "10"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer3"]
margin_left = 395.0
margin_right = 399.0
margin_bottom = 48.0

[node name="Label4" type="Label" parent="HBoxContainer3"]
margin_left = 403.0
margin_top = 17.0
margin_right = 523.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "XP until next level:"
align = 2

[node name="XPLeftLabel" type="Label" parent="HBoxContainer3"]
margin_left = 527.0
margin_top = 17.0
margin_right = 608.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "700"
align = 2

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 52.0
margin_right = 608.0
margin_bottom = 56.0
